<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent android:action="android.intent.action.VIEW" android:data="cloudflarecontrol://search" android:targetPackage="dev.cfmobile.app" android:targetClass="dev.cfmobile.app.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="explorer"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_explorer_short"
        android:shortcutLongLabel="@string/shortcut_explorer_long">
        <intent android:action="android.intent.action.VIEW" android:data="cloudflarecontrol://explorer" android:targetPackage="dev.cfmobile.app" android:targetClass="dev.cfmobile.app.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="transfers"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_transfers_short"
        android:shortcutLongLabel="@string/shortcut_transfers_long">
        <intent android:action="android.intent.action.VIEW" android:data="cloudflarecontrol://transfers" android:targetPackage="dev.cfmobile.app" android:targetClass="dev.cfmobile.app.MainActivity" />
    </shortcut>
</shortcuts>
